fix: Creating a task with very long subject, e.g. 200 symbols, breaks the page layout

--- a/TelerikMvcWebMail/Content/sidebar.scss
+++ b/TelerikMvcWebMail/Content/sidebar.scss
@@ -1,9 +1,10 @@
 ﻿@import '_variables.scss';
 
 .main-sidebar {
+    width: 200px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
-    width: 200px;
     margin-right: -20px;
     padding-right: 20px;
     background: #fafafa;
